[package]
name = "hot"
version = "0.0.1"
authors = ["Gray Olson <gray@grayolson.com>"]
repository = "https://github.com/termhn/hot"
description = "A mid-level Vulkan abstraction library for the expert and the masses."
keywords = ["vulkan", "graphics", "ash", "games"]
readme = "README.md"
license = "MIT OR Apache-2.0 OR Zlib"
edition = "2018"

[dependencies]
ash = "0.29"
vk-mem = "0.2"
generational-arena = "0.2"